# radar_ws

./: .gitignore  cansend_commands.txt  useful_commands.txt
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
devel/.private/can_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/canopen_402/: .catkin  local_setup.sh
devel/.private/canopen_chain_node/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/canopen_master/: .catkin  .rosinstall  setup.sh
devel/.private/canopen_motor_node/: .catkin  .rosinstall  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/radar_conti/: .catkin  local_setup.sh
devel/.private/rplidar_ros/: .catkin  .rosinstall  setup.sh
devel/.private/socketcan_bridge/: .catkin  .rosinstall
devel/.private/socketcan_interface/: .catkin  local_setup.sh
log_bags/: log_readme.txt
logs/canopen_motor_node/: build.cmake.001.log.stderr
logs/radar_conti/: build.make.000.log.stderr  build.make.003.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr
logs/rplidar_ros/: build.make.000.log.stderr
ros_logs/: lidar_log_readme.txt
scripts/: Radar_config.sh  can_setup.sh  config_after_flash.sh  lidar_topic_log.sh  runLidar.sh  runRaL.sh  runRaL_log.sh  setup.sh
src/car_can_observation/: CMakeLists.txt  package.xml
src/car_can_observation/include/: car_can_header.hpp  e-golf_can_defines.h
src/car_can_observation/src/: car_can_class.cpp  car_can_init.cpp
src/closest_points_difference/: CMakeLists.txt  package.xml
src/closest_points_difference/src/: calculator.cpp
src/conti_radar_driver/include/: ars_408_can_defines.h  radar_conti_ars408_component.hpp
src/conti_radar_driver/src/: radar_conti_class.cpp
src/rplidar_ros/launch/: rplidar_and_radar rviz.launch  rplidar_and_radar.launch
src/rplidar_ros/rviz/: rplidar_and_radar.rviz
src/rplidar_ros/src/: client.cpp  node.cpp
src/rviz_markers/: CMakeLists.txt
(+89 files in other folders)
